fixed the UI issue.

--- a/app/src/main/res/layout/fragment_create_customer.xml
+++ b/app/src/main/res/layout/fragment_create_customer.xml
@@ -133,9 +133,13 @@
                     style="@style/cabin_linear_style">
 
                     <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_marginTop="16dp"
                         android:id="@+id/color_picker_img"
                         android:layout_width="match_parent"
+                        android:src="@drawable/color_pic"
                         android:layout_height="wrap_content"
+                        android:scaleType="centerInside"
+                        android:adjustViewBounds="true"
                         android:visibility="visible" />
                 </LinearLayout>
 
