--- a/app/src/main/res/layout/fragment_day_sales.xml
+++ b/app/src/main/res/layout/fragment_day_sales.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundwhite"
     android:orientation="vertical">
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,7 +33,19 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:layout_below="@+id/header"
+            android:layout_marginBottom="16dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true" />
+
+        <Button
+            android:id="@+id/add_new"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:background="@color/colorPrimary"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:text="ADD"/>
     </RelativeLayout>
 </FrameLayout>
