--- a/app/src/main/res/layout/sales_fragment.xml
+++ b/app/src/main/res/layout/sales_fragment.xml
@@ -266,6 +266,9 @@
                     android:layout_marginTop="16dp"
                     android:gravity="center"
                     android:text="@string/sub_btn"
+                    android:textStyle="bold"
+                    android:background="@color/colorPrimary"
+                    android:textColor="@android:color/white"
                     android:textSize="16sp" />
             </LinearLayout>
 
