--- a/app/src/main/res/layout/sales_header_date_screen.xml
+++ b/app/src/main/res/layout/sales_header_date_screen.xml
@@ -7,90 +7,55 @@
     android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:background="@android:color/darker_gray"
+        android:background="@color/colorPrimary"
         android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/left_arrow"
-            android:padding="16dp"
-            android:scaleType="centerInside"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:rotation="-90"
-            android:src="@android:drawable/arrow_up_float"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <ImageView
-            android:id="@+id/right_arrow"
-            android:padding="16dp"
-            android:scaleType="centerInside"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:rotation="90"
-            android:src="@android:drawable/arrow_up_float"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/header_date"
-            android:layout_toLeftOf="@+id/right_arrow"
-            android:layout_toRightOf="@+id/left_arrow"
             android:layout_width="match_parent"
             android:layout_centerVertical="true"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
+                android:layout_alignParentStart="true"
                 android:id="@+id/selected_date"
                 style="@style/date_rows_txt"
                 android:textSize="@dimen/header_1"
-                android:layout_gravity="center"
+                android:layout_gravity="center|left"
+                android:textStyle="bold|italic"
+                android:textColor="@android:color/white"
+                android:layout_margin="32dp"
+                android:layout_centerHorizontal="true"
                 android:text="12/04/2018"/>
-        </LinearLayout>
+            <TextView
+                android:layout_marginEnd="-16dp"
+                android:id="@+id/ice_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/header_3"
+                android:text="@string/total_blocks"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@+id/ice_count"
+                android:textColor="@android:color/white"/>
+            <TextView
+                android:layout_margin="32dp"
+                android:id="@+id/ice_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/header_1"
+                android:layout_centerVertical="true"
+                android:textColor="@android:color/white"
+                android:layout_alignParentEnd="true"
+                android:textStyle="bold"
+                android:text="20"/>
+        </RelativeLayout>
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="2dp"
-        android:orientation="vertical">
-        <LinearLayout
-            android:id="@+id/linear_sal_cab_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
-            <Spinner
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/header_1"
-                android:id="@+id/cab_name_sp"
-                style="@style/SpinnerTheme"
-                android:layout_marginRight="2dp"
-                android:background="@android:color/darker_gray" />
-            <Spinner
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/header_1"
-                android:id="@+id/sal_cus_ed"
-                style="@style/SpinnerTheme"
-                android:background="@android:color/darker_gray" />
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:background="@android:color/darker_gray"
-        android:weightSum="4"
+        android:weightSum="3"
         android:orientation="horizontal">
-        <TextView
-            android:layout_width="0dp"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/header_3"
-            android:layout_marginRight="4dp"
-            android:text="@string/total_blocks"/>
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -119,18 +84,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="4"
+        android:weightSum="3"
         android:background="@android:color/darker_gray"
         android:orientation="horizontal">
-        <TextView
-            android:id="@+id/total_blocks"
-            android:layout_width="0dp"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sales_header_count"
-            android:layout_marginRight="4dp"
-            android:text="20"/>
         <TextView
             android:id="@+id/total_amount"
             android:layout_width="0dp"
